// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section/> when children are provided should render correctly 1`] = `
<Section
  title="test-title"
>
  <section
    className="flexColumn flexCenter test-fade-in-classes"
  >
    <h2
      className="sectionTitle"
    >
      test-title
    </h2>
    <SomeComponent
      key="1"
    >
      <p
        key="test-key"
      >
        some component
      </p>
    </SomeComponent>
    <p
      key="test-key"
    >
      some component
    </p>
  </section>
</Section>
`;

exports[`<Section/> when the children are HTML elements should render correctly 1`] = `
<Section
  title="test-title"
>
  <section
    className="flexColumn flexCenter test-fade-in-classes"
  >
    <h2
      className="sectionTitle"
    >
      test-title
    </h2>
    <p
      key="test-key"
    >
      this is some content
    </p>
  </section>
</Section>
`;
